--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,7 +4,7 @@
 	
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>About Us<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1>Hakkımızda<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
 		</div>
 	</div>
 	
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="section-title row text-center">
                 <div class="col-md-8 offset-md-2">
-                    <h3>About</h3>
+                    <h3>Hakkında</h3>
                     <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem!</p>
                 </div>
             </div><!-- end title -->
@@ -20,13 +20,13 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
-                        <h4>2018 BEST SmartEDU education school</h4>
-                        <h2>Awards Winner Support Center</h2>
+                        <h4>2022 EN İYİ EĞİTİM OKULU SmartEDU</h4>
+                        <h2>Ödül Kazanan Destek Merkezi</h2>
                         <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
 
                         <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis montes, nascetur ridiculus mus. Sed vitae rutrum neque. </p>
 
-                        <a href="#" class="hover-btn-new orange"><span>Learn More</span></a>
+                        <a href="#" class="hover-btn-new orange"><span>Daha Fazla Bilgi Edin</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
@@ -45,12 +45,12 @@
 				
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
-                        <h2>The standard Lorem Ipsum passage, used since the 1500s</h2>
+                        <h2>1500'lerden Beri Kullanılan Standart Eğitim</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                         <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum.</p>
 
-                        <a href="#" class="hover-btn-new orange"><span>Learn More</span></a>
+                        <a href="#" class="hover-btn-new orange"><span>Daha Fazla Bilgi Edin</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
@@ -64,7 +64,7 @@
 				<div class="col-lg-4 col-md-6 col-12">
 					<div class="inner-hmv">
 						<div class="icon-box-hmv"><i class="flaticon-achievement"></i></div>
-						<h3>Mission</h3>
+						<h3>Misyon</h3>
 						<div class="tr-pa">M</div>
 						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam eligendi expedita, provident cupiditate in excepturi.</p>
@@ -73,7 +73,7 @@
 				<div class="col-lg-4 col-md-6 col-12">
 					<div class="inner-hmv">
 						<div class="icon-box-hmv"><i class="flaticon-eye"></i></div>
-						<h3>Vision</h3>
+						<h3>Vizyon</h3>
 						<div class="tr-pa">V</div>
 						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam eligendi expedita, provident cupiditate in excepturi.</p>
@@ -82,7 +82,7 @@
 				<div class="col-lg-4 col-md-6 col-12">
 					<div class="inner-hmv">
 						<div class="icon-box-hmv"><i class="flaticon-history"></i></div>
-						<h3>History</h3>
+						<h3>Tarih</h3>
 						<div class="tr-pa">H</div>
 						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam eligendi expedita, provident cupiditate in excepturi.</p>
@@ -95,7 +95,7 @@
     <div id="testimonials" class="parallax section db parallax-off" style="background-image:url('images/parallax_04.jpg');">
         <div class="container">
             <div class="section-title text-center">
-                <h3>Testimonials</h3>
+                <h3>Referanslar</h3>
                 <p>Lorem ipsum dolor sit aet, consectetur adipisicing lit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </div><!-- end title -->
 
@@ -108,8 +108,8 @@
                                 <h4>James Fernando </h4>
                             </div>
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                                <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
+                                <h3><i class="fa fa-quote-left"></i> Harika Destek!</h3>
+                                <p class="lead">Son derece yetenekli, deneyimli ve profesyonel bir ekiple yarışma ile projemi zamanında aldılar.</p>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -121,8 +121,8 @@
                                 <h4>Jacques Philips </h4>
                             </div>
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                                <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
+                                <h3><i class="fa fa-quote-left"></i> Müthiş Hizmet!</h3>
+                                <p class="lead">Zevki kınama ve acıyı övme şeklindeki tüm bu yanlış fikrin nasıl doğduğunu açıklayın, ben de size tamamlayacağım.</p>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -134,8 +134,8 @@
                                 <h4>Venanda Mercy </h4>
                             </div>
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
+                                <h3><i class="fa fa-quote-left"></i> Harika ve Yetenekli Ekip!</h3>
+                                <p class="lead">İnsan mutluluğunun ustası kimse reddetmez, hoşlanmaz zevkten kaçınır, çünkü o çok haz peşindedir. </p>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -146,8 +146,8 @@
                                 <h4>James Fernando </h4>
                             </div>
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                                <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
+                                <h3><i class="fa fa-quote-left"></i> Harika Destek!</h3>
+                                <p class="lead">Son derece yetenekli, deneyimli ve profesyonel bir ekiple yarışma ile projemi zamanında aldılar.</p>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -159,8 +159,8 @@
                                 <h4>Jacques Philips </h4>
                             </div>
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                                <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
+                                <h3><i class="fa fa-quote-left"></i> Müthiş Hizmetler!</h3>
+                                <p class="lead">Zevki kınama ve acıyı övme şeklindeki tüm bu yanlış fikrin nasıl doğduğunu açıklayın, ben de size tamamlayacağım.</p>
                             </div>
                             <!-- end testi-meta -->
                         </div>
@@ -172,8 +172,8 @@
                                 <h4>Venanda Mercy </h4>
                             </div>
                             <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
+                                <h3><i class="fa fa-quote-left"></i> Harika ve Yetenekli Ekip!</h3>
+                                <p class="lead">İnsan mutluluğunun ustası kimse reddetmez, hoşlanmaz zevkten kaçınır, çünkü o çok haz peşindedir. </p>
                             </div>
                             <!-- end testi-meta -->
                         </div><!-- end testimonial -->
