--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -4,16 +4,16 @@
             <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="widget clearfix">
                     <div class="widget-title">
-                        <h3>About US</h3>
+                        <h3>Hakkımızda</h3>
                     </div>
                     <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>   
                     <div class="footer-right">
                         <ul class="footer-links-soi">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-github"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-square-dribbble"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
                         </ul><!-- end links -->
                     </div>						
                 </div><!-- end clearfix -->
@@ -22,14 +22,14 @@
             <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="widget clearfix">
                     <div class="widget-title">
-                        <h3>Information Link</h3>
+                        <h3>Bilgi Bağlantısı</h3>
                     </div>
                     <ul class="footer-links">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Ana Sayfa</a></li>
                         <li><a href="#">Blog</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Fiyatlandırma</a></li>
+                        <li><a href="#">Hakkında</a></li>
+                        <li><a href="#">İletişim</a></li>
                     </ul><!-- end links -->
                 </div><!-- end clearfix -->
             </div><!-- end col -->
@@ -37,14 +37,14 @@
             <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="widget clearfix">
                     <div class="widget-title">
-                        <h3>Contact Details</h3>
+                        <h3>İletişim Detayları</h3>
                     </div>
 
                     <ul class="footer-links">
                         <li><a href="mailto:#">info@yoursite.com</a></li>
                         <li><a href="#">www.yoursite.com</a></li>
                         <li>PO Box 16122 Collins Street West Victoria 8007 Australia</li>
-                        <li>+61 3 8376 6284</li>
+                        <li>+90 000 000 00 00</li>
                     </ul><!-- end links -->
                 </div><!-- end clearfix -->
             </div><!-- end col -->
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="footer-distributed">
             <div class="footer-center">                   
-                <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">SmartEDU</a> Design By : <a href="https://html.design/">html design</a></p>
+                <p class="footer-company-name">Tüm hakları Saklıdır. &copy; 2022 <a href="/">SmartEDU</a></p>
             </div>
         </div>
     </div><!-- end container -->
@@ -66,8 +66,8 @@
 <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
 
 <!-- ALL JS FILES -->
-<script src="js/all.js"></script>
+<script src="/js/all.js"></script>
 <!-- ALL PLUGINS -->
-<script src="js/custom.js"></script>
+<script src="/js/custom.js"></script>
 </body>
 </html>
